styling addApartment component

--- a/redux-demo/src/styles/select.module.css
+++ b/redux-demo/src/styles/select.module.css
@@ -10,7 +10,7 @@
     padding-right: 8px;
     border-radius: 6px;
     outline: none;
-    background-color: #19193f;
+    background-color: #121212;
     color: #949cab;
   }
   
@@ -75,7 +75,7 @@
     width: 100%;
     left: 0;
     top: calc(100% + .25em);
-    background-color: #19193f;
+    background-color: #121212;
     z-index: 100;
   }
   
@@ -106,7 +106,7 @@
   } */
   
   .option.highlighted {
-    background-color: #68106d;
+    background-image: linear-gradient(to right, #e8132f, #fd3b54);
     color: white
   }
   
@@ -119,7 +119,7 @@
     cursor: pointer;
     background: none;
     outline: none;
-    background-color: #68106d;
+    background-image: linear-gradient(to right, #e8132f, #fd3b54);
     color: white;
   }
   
