--- a/redux-demo/src/UI/Loading Spinner/loadingSpinner.css
+++ b/redux-demo/src/UI/Loading Spinner/loadingSpinner.css
@@ -12,7 +12,7 @@
   border-top: 1.1em solid rgba(62,40,40, 0.2);
   border-right: 1.1em solid rgba(62,40,40, 0.2);
   border-bottom: 1.1em solid rgba(62,40,40, 0.2);
-  border-left: 1.1em solid #3e2828;
+  border-left: 1.1em solid #0C768A;
   -webkit-transform: translateZ(0);
   -ms-transform: translateZ(0);
   transform: translateZ(0);
